# ROS2_Learning

./: .gitignore
src/chala_pkg/: CMakeLists.txt  package.xml
src/chala_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  c++ template.cpp  first_node.cpp  hardware_status_publisher.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
src/components_cpp/: CMakeLists.txt  package.xml
src/components_cpp/src/: node1.cpp  node2.cpp  number_publisher.cpp
src/components_py/components_py/: manual_composition.py
src/cpp_action/: CMakeLists.txt  package.xml
src/cpp_action/src/: count_until_client.cpp  count_until_server.cpp  count_until_server_queue_goals.cpp  move_robot_client.cpp  move_robot_server.cpp
src/executors_cpp/src/: multi_threaded_executor.cpp
src/executors_py/executors_py/: multi_threaded_executor.py  number_publisher.py  single_threaded_executor.py
src/finale/: CMakeLists.txt  package.xml
src/finale/src/: turle_controller.cpp  turtle_bot_controller.cpp  turtle_controller.cpp
src/lifecycle_cpp/src/: number_publisher.cpp
src/lifecycle_py/: setup.py
src/lifecycle_py/lifecycle_py/: move_robot_server.py  move_robot_startup.py  number_publisher.py
src/mathi_pkg/: package.xml  setup.cfg  setup.py
src/mathi_pkg/mathi_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  first_node.py  hardware_status_publisher.py  led_panel.py  number_counter.py  number_publisher.py  robot_news_station.py  smart_phone.py  template_python_node.py
src/my_gazebo_robot_bringup/: CMakeLists.txt  package.xml
src/my_gazebo_robot_bringup/config/: gazebo_bridge.yaml
src/my_gazebo_robot_bringup/launch/: my_gazebo_robot.launch.py  my_gazebo_robot.launch.xml
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: catch_them_all_config.yaml  number_app.yaml  radio_config.yaml
src/my_robot_bringup/launch/: components.launch.py  components.launch.xml  finale.launch.xml  finale_turtlebot.launch.xml  lifecycle.launch.py  lifecycle.launch.xml  move_robot.launch.xml  number_app.launch.py  number_app.launch.xml  radio.launch.xml  turtlesim_catch_them_all.launch.xml
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: arm.launch.xml  display.launch.py  display.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro  standalone_arm.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/action/: MoveRobot.action  MoveTurtle.action
src/my_robot_interfaces/msg/: HardwareStatus.msg
src/py_action/: package.xml  setup.py
src/py_action/py_action/: count_until_client.py  count_until_server.py  move_robot_client.py  move_robot_server.py
src/turtlesim_catch_them_all/: package.xml  setup.py
src/urdf_files/: my_robot.urdf
(+3 files in other folders)
